--- a/style.css
+++ b/style.css
@@ -20,10 +20,9 @@ main{
     }
     
     .tela_iphone{
-    width: 235px;
-    height: 474px;
-    background-image: url("imagens/frame-iphone.png");
-
+    width: 300px;
+    height: 424px;
+    background-image: url("imagens/frame-iphone13.png");
     background-position: center center;
     background-size: 80% 80%;
     background-repeat: no-repeat;
@@ -33,12 +32,16 @@ main{
     transform: translate(-50%, -50%);/*css, toda declaraçao entre paretenses, só é aceita, separada por virgula*/
     }
     .home_iphone{
-        background-color: aqua;
-        position: relative;
-        width: 163px;
-        height: 285px;
-        left: 37px;
-        top: 95px;
+        background-color: black;
+        position: absolute;
+        width: 132px;
+        height: 280px;
+        left: 84px;
+        top: 72px;
+        border-top-left-radius: 18px;
+        border-top-right-radius: 18px;
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius:20px;
     }
 
     .icones_sociais{
@@ -68,11 +71,12 @@ main{
         margin-right: 40px;
         width: 50px;
         height:50px;
-        background-image: url("imagens/logo-whats.png");
+        background-image: url("imagens/logo-whats.jpg");
         background-size: cover;
         border-radius: 50%;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.466);
         box-sizing: border-box;
+        
         
         }
         .instagram{
